Updated email address

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
 
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
+        <p>My email addy is <a href="junquanpan2016@gmail.com">junquanpan2016@gmail.com</a>.</p>
 
         <h2>Math is hard, let's go shopping</h2>
 
